<resources>
    <string name="app_name">Calculator</string>
    <string name="settings_result_panel_title">Панель настроек</string>
    <string name="resultPanelSettingsText">Расположение панели результата</string>
    <string name="resultPanelSettingsEnum">Слева</string>
    <string name="formatResultViewName">Количество знаков после запятой</string>
    <string name="formatResultViewDescription">Один знак</string>
    <string name="vibrationForceViewName">Сила вибрации</string>
    <string name="vibrationForceViewDescription">Слабая</string>
    <string name="ok_positive_button">Ok</string>
    <string name="no_negative_button">No</string>
    <string name="settings_menu_name">Настройки</string>
    <string name="history_menu_name">История</string>


    <string-array name="result_panel_types">
        <item>Слева</item>
        <item>Справа</item>
        <item>Скрыта</item>
    </string-array>

    <string-array name="format_result_types">
        <item>Один знак</item>
        <item>Три знака</item>
        <item>Много знаков</item>
    </string-array>

    <string-array name="vibration_force_types">
        <item>Нет</item>
        <item>Слабая</item>
        <item>Средняя</item>
        <item>Сильная</item>
    </string-array>

</resources>