<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:textColor="@color/blackhalf"
        android:textSize="32sp"
        android:text="@string/settings_menu_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settings_back"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:background="#FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        tools:srcCompat="@drawable/ic_arrow_back"
        app:tint="@color/grayred"/>

    <LinearLayout
        android:id="@+id/resultPanelSettingsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48sp"
        android:background="?attr/selectableItemBackground"
        android:backgroundTintMode="add"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSettings"
        >

        <TextView
            android:id="@+id/menuPoint1View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:text="@string/resultPanelSettingsText"
            android:textColor="@color/blackhalf"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp"
            android:background="@drawable/my_custom_background"/>

        <TextView
            android:id="@+id/resultPanelSettingsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/resultPanelSettingsEnum"
            android:textColor="@color/grayred"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp"
            android:background="@drawable/my_custom_background"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/formatResultContainer"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32sp"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultPanelSettingsContainer"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/formatResultViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:background="@drawable/my_custom_background"
            android:padding="8dp"

            android:text="@string/formatResultViewName"
            android:textColor="@color/blackhalf"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/formatResultViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/my_custom_background"
            android:paddingLeft="8dp"

            android:text="@string/formatResultViewDescription"
            android:textColor="@color/grayred"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vibrationForceContainer"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32sp"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formatResultContainer"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/vibrationForceViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_custom_background"
            android:padding="8dp"
            android:text="@string/vibrationForceViewName"
            android:textColor="@color/blackhalf"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/vibrationForceViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_custom_background"
            android:paddingLeft="8dp"
            android:text="@string/vibrationForceViewDescription"
            android:textColor="@color/grayred"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>